pravki ot Vani RadioKnopki 1

--- a/letters/letter3/index.html
+++ b/letters/letter3/index.html
@@ -10,10 +10,10 @@
   <tr>
     <td height="109px" valign="top"
         style="vertical-align: top; line-height: 0; height: 109px;">
-      <div style="height: 109px;">
-        <img align="left" border="0" vspace="0" width="600" height="109" style="display: block; border: none;"
-             src="images/header.jpg" alt=""/>
-      </div>
+
+      <img align="left" border="0" vspace="0" width="600" height="109" style="display: block; border: none;"
+           src="images/header.jpg" alt=""/>
+
     </td>
   </tr>
   </thead>
@@ -31,10 +31,10 @@
         est at lobortis. Cras mattis consectetur purus sit amet fermentum.
       </p>
 
-      <div style="height: 319px;">
-        <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #000000;"
-             src="images/central-img.jpg" alt=""/>
-      </div>
+
+      <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #000000;"
+           src="images/central-img.jpg" alt=""/>
+
     </td>
   </tr>
   <tr>
@@ -83,10 +83,10 @@
   </tr>
   <tr>
     <td>
-      <div style="height: 20px;">
-        <img align="center" border="0" vspace="0" width="600" height="20" style="display: block; border: none;"
-             src="images/bronze-trim-bottom.jpg" alt=""/>
-      </div>
+
+      <img align="center" border="0" vspace="0" width="600" height="20" style="display: block; border: none;"
+           src="images/bronze-trim-bottom.jpg" alt=""/>
+
     </td>
   </tr>
   </tbody>
@@ -98,32 +98,36 @@
         <tbody>
         <tr>
           <td width="50%">
-            <table align="right" cellspacing="0" cellpadding="0" width="185px" style="background-color:#000000;padding: 0 50px 0 0">
+            <table align="right" cellspacing="0" cellpadding="0" width="185px"
+                   style="background-color:#000000;padding: 0 50px 0 0">
               <tbody>
               <tr>
                 <td>
-                  <div style="height: 40px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/facebook.png" alt=""/>
-                    </a>
-                  </div>
+
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/facebook.png" alt=""/>
+                  </a>
+
                 </td>
                 <td>
-                  <div style="height: 40px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/twitter.png" alt=""/>
-                    </a>
-                  </div>
+
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/twitter.png" alt=""/>
+                  </a>
+
                 </td>
                 <td>
-                  <div style="height: 40px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/zw.png" alt=""/>
-                    </a>
-                  </div>
+
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/zw.png" alt=""/>
+                  </a>
+
                 </td>
               </tr>
               </tbody>
@@ -145,12 +149,13 @@
         <tbody>
         <tr>
           <td align="center">
-            <div style="height: 39px;">
-              <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                <img align="center" border="0" vspace="0" style="display: block; border: none"
-                     src="images/western-concepts.png" alt=""/>
-              </a>
-            </div>
+
+            <a href="#"
+               style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+              <img align="center" border="0" vspace="0" style="display: block; border: none"
+                   src="images/western-concepts.png" alt=""/>
+            </a>
+
           </td>
         </tr>
         </tbody>
@@ -161,7 +166,8 @@
         <tbody>
         <tr>
           <td align="center">
-            <a href="#" style="font: 9px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 20px; text-transform:uppercase; color:#99958e; text-decoration: none;">Sushi
+            <a href="#"
+               style="font: 9px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 20px; text-transform:uppercase; color:#99958e; text-decoration: none;">Sushi
               Neko</a>
           </td>
           <td align="center">
