--- a/letters/letter4/index.html
+++ b/letters/letter4/index.html
@@ -10,10 +10,10 @@
   <tr>
     <td height="128px" valign="top"
         style="vertical-align: top; line-height: 0; height: 128px;">
-      <div style="height: 128px;">
-        <img align="left" border="0" vspace="0" width="600" height="128" style="display: block; border: none;"
-             src="images/header.jpg" alt=""/>
-      </div>
+
+      <img align="left" border="0" vspace="0" width="600" height="128" style="display: block; border: none;"
+           src="images/header.jpg" alt=""/>
+
     </td>
   </tr>
   </thead>
@@ -24,15 +24,16 @@
         <b>Would you like to try our Sushi Party to go Trays?</b>
       </p>
 
-      <p style="text-transform:uppercase;font-family: Arial;font-size: 12px;line-height: 18px;color: #333333;text-align: justify">
+      <p
+        style="text-transform:uppercase;font-family: Arial;font-size: 12px;line-height: 18px;color: #333333;text-align: justify">
         We have various Sushi Party trays to select for various special occasions: Game parties,
         Baby showers or Weekend Get-togethers.
       </p>
 
-      <div style="height: 340px;">
-        <img align="center" border="0" vspace="0" style="display: block; border: none;"
-             src="images/central-img.jpg" alt=""/>
-      </div>
+
+      <img align="center" border="0" vspace="0" style="display: block; border: none;"
+           src="images/central-img.jpg" alt=""/>
+
     </td>
   </tr>
   <tr>
@@ -81,10 +82,10 @@
   </tr>
   <tr>
     <td>
-      <div style="height: 57px;">
-        <img align="center" border="0" vspace="0" width="600" height="57" style="display: block; border: none;"
-             src="images/trim-bottom.jpg" alt=""/>
-      </div>
+
+      <img align="center" border="0" vspace="0" width="600" height="57" style="display: block; border: none;"
+           src="images/trim-bottom.jpg" alt=""/>
+
     </td>
   </tr>
   </tbody>
@@ -96,41 +97,46 @@
         <tbody>
         <tr>
           <td width="30%">
-            <div style="height: 36px;">
-              <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                <img align="center" border="0" vspace="0" style="display: block; border: none;"
-                     src="images/nake-res.jpg"
-                     alt=""/>
-              </a>
-            </div>
+
+            <a href="#"
+               style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+              <img align="center" border="0" vspace="0" style="display: block; border: none;"
+                   src="images/nake-res.jpg"
+                   alt=""/>
+            </a>
+
           </td>
           <td width="30%">
-            <table align="center" cellspacing="0" cellpadding="0" width="80%" style="background-color:#660000;padding: 0">
+            <table align="center" cellspacing="0" cellpadding="0" width="80%"
+                   style="background-color:#660000;padding: 0">
               <tbody>
               <tr>
                 <td width="20%">
-                  <div style="height: 37px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/facebook.png" alt=""/>
-                    </a>
-                  </div>
+
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/facebook.png" alt=""/>
+                  </a>
+
                 </td>
                 <td width="20%">
-                  <div style="height: 37px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/twitter.png" alt=""/>
-                    </a>
-                  </div>
+
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/twitter.png" alt=""/>
+                  </a>
+
                 </td>
                 <td width="20%">
-                  <div style="height: 37px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/zw.png" alt=""/>
-                    </a>
-                  </div>
+
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/zw.png" alt=""/>
+                  </a>
+
                 </td>
               </tr>
               </tbody>
@@ -152,12 +158,12 @@
         <tbody>
         <tr>
           <td align="center">
-            <div style="height: 37px;">
-              <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                <img align="center" border="0" vspace="0" style="display: block; border: none"
-                     src="images/western-concepts.png" alt=""/>
-              </a>
-            </div>
+
+            <a href="#"
+               style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+              <img align="center" border="0" vspace="0" style="display: block; border: none"
+                   src="images/western-concepts.png" alt=""/>
+            </a>
           </td>
         </tr>
         </tbody>
@@ -168,7 +174,8 @@
         <tbody>
         <tr>
           <td align="center">
-            <a href="#" style="font: 9px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 20px; text-transform:uppercase; color:#99958e; text-decoration: none;">Sushi
+            <a href="#"
+               style="font: 9px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 20px; text-transform:uppercase; color:#99958e; text-decoration: none;">Sushi
               Neko</a>
           </td>
           <td align="center">
