--- a/letters/letter5/index.html
+++ b/letters/letter5/index.html
@@ -10,10 +10,8 @@
   <tr>
     <td height="80px" valign="top"
         style="vertical-align: top; line-height: 0; height: 80px;">
-      <div style="height: 80px;">
-        <img align="left" border="0" vspace="0" width="600" height="80" style="display: block; border: none;"
-             src="images/header.jpg" alt=""/>
-      </div>
+      <img align="left" border="0" vspace="0" width="600" height="80" style="display: block; border: none;"
+           src="images/header.jpg" alt=""/>
     </td>
   </tr>
   </thead>
@@ -30,10 +28,8 @@
         Game parties, Baby showers or Weekend Get-togethers.
       </p>
 
-      <div style="height: 340px;">
-        <img align="center" border="0" vspace="0" style="display: block; border: none;"
-             src="images/central-img.jpg" alt=""/>
-      </div>
+      <img align="center" border="0" vspace="0" style="display: block; border: none;"
+           src="images/central-img.jpg" alt=""/>
     </td>
   </tr>
   <tr>
@@ -82,10 +78,8 @@
   </tr>
   <tr>
     <td>
-      <div style="height: 86px;">
-        <img align="center" border="0" vspace="0" width="600" height="86" style="display: block; border: none;"
-             src="images/trim-bottom.jpg" alt=""/>
-      </div>
+      <img align="center" border="0" vspace="0" width="600" height="86" style="display: block; border: none;"
+           src="images/trim-bottom.jpg" alt=""/>
     </td>
   </tr>
   </tbody>
@@ -97,41 +91,38 @@
         <tbody>
         <tr>
           <td width="30%">
-            <div style="height: 36px;">
-              <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                <img align="center" border="0" vspace="0" style="display: block; border: none;"
-                     src="images/nake-res.jpg"
-                     alt=""/>
-              </a>
-            </div>
+            <a href="#"
+               style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+              <img align="center" border="0" vspace="0" style="display: block; border: none;"
+                   src="images/nake-res.jpg"
+                   alt=""/>
+            </a>
           </td>
           <td width="30%">
-            <table align="center" cellspacing="0" cellpadding="0" width="80%" style="background-color:#330000;padding: 0">
+            <table align="center" cellspacing="0" cellpadding="0" width="80%"
+                   style="background-color:#330000;padding: 0">
               <tbody>
               <tr>
                 <td width="20%">
-                  <div style="height: 42px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/facebook.png" alt=""/>
-                    </a>
-                  </div>
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/facebook.png" alt=""/>
+                  </a>
                 </td>
                 <td width="20%">
-                  <div style="height: 42px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/twitter.png" alt=""/>
-                    </a>
-                  </div>
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/twitter.png" alt=""/>
+                  </a>
                 </td>
                 <td width="20%">
-                  <div style="height: 42px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/zw.png" alt=""/>
-                    </a>
-                  </div>
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/zw.png" alt=""/>
+                  </a>
                 </td>
               </tr>
               </tbody>
@@ -153,12 +144,11 @@
         <tbody>
         <tr>
           <td align="center">
-            <div style="height: 37px;">
-              <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                <img align="center" border="0" vspace="0" style="display: block; border: none"
-                     src="images/western-concepts.png" alt=""/>
-              </a>
-            </div>
+            <a href="#"
+               style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+              <img align="center" border="0" vspace="0" style="display: block; border: none"
+                   src="images/western-concepts.png" alt=""/>
+            </a>
           </td>
         </tr>
         </tbody>
@@ -169,7 +159,8 @@
         <tbody>
         <tr>
           <td align="center">
-            <a href="#" style="font: 9px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 20px; text-transform:uppercase; color:#99958e; text-decoration: none;">Sushi
+            <a href="#"
+               style="font: 9px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 20px; text-transform:uppercase; color:#99958e; text-decoration: none;">Sushi
               Neko</a>
           </td>
           <td align="center">
