--- a/letters/letter2/index.html
+++ b/letters/letter2/index.html
@@ -10,10 +10,8 @@
   <tr>
     <td height="93px" valign="top"
         style="vertical-align: top; line-height: 0; height: 93px;border-bottom: 2px solid #532b30;">
-      <div style="height: 93px;">
-        <img align="left" border="0" vspace="0" width="600" height="93" style="display: block; border: none;"
-             src="images/header.jpg" alt=""/>
-      </div>
+      <img align="left" border="0" vspace="0" width="600" height="93" style="display: block; border: none;"
+           src="images/header.jpg" alt=""/>
     </td>
   </tr>
   </thead>
@@ -31,10 +29,10 @@
         est at lobortis. Cras mattis consectetur purus sit amet fermentum.
       </p>
 
-      <div style="height: 308px;">
-        <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #ffffff;"
-             src="images/central-img.jpg" alt=""/>
-      </div>
+
+      <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #ffffff;"
+           src="images/central-img.jpg" alt=""/>
+
     </td>
   </tr>
   <tr>
@@ -90,41 +88,46 @@
         <tbody>
         <tr>
           <td width="30%">
-            <div style="height: 36px;">
-              <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                <img align="center" border="0" vspace="0" style="display: block; border: none;"
-                     src="images/nake-res.jpg"
-                     alt=""/>
-              </a>
-            </div>
+
+            <a href="#"
+               style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+              <img align="center" border="0" vspace="0" style="display: block; border: none;"
+                   src="images/nake-res.jpg"
+                   alt=""/>
+            </a>
+
           </td>
           <td width="30%">
-            <table align="center" cellspacing="0" cellpadding="0" width="80%" style="background-color:#370403;padding: 0">
+            <table align="center" cellspacing="0" cellpadding="0" width="80%"
+                   style="background-color:#370403;padding: 0">
               <tbody>
               <tr>
                 <td width="20%">
-                  <div style="height: 37px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/facebook.png" alt=""/>
-                    </a>
-                  </div>
+
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/facebook.png" alt=""/>
+                  </a>
+
                 </td>
                 <td width="20%">
-                  <div style="height: 37px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/twitter.png" alt=""/>
-                    </a>
-                  </div>
+
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/twitter.png" alt=""/>
+                  </a>
+
                 </td>
                 <td width="20%">
-                  <div style="height: 37px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/zw.png" alt=""/>
-                    </a>
-                  </div>
+
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/zw.png" alt=""/>
+                  </a>
+
                 </td>
               </tr>
               </tbody>
@@ -146,12 +149,13 @@
         <tbody>
         <tr>
           <td align="center">
-            <div style="height: 37px;">
-              <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                <img align="center" border="0" vspace="0" style="display: block; border: none"
-                     src="images/western-concepts.png" alt=""/>
-              </a>
-            </div>
+
+            <a href="#"
+               style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+              <img align="center" border="0" vspace="0" style="display: block; border: none"
+                   src="images/western-concepts.png" alt=""/>
+            </a>
+
           </td>
         </tr>
         </tbody>
@@ -162,7 +166,8 @@
         <tbody>
         <tr>
           <td align="center">
-            <a href="#" style="font: 9px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 20px; text-transform:uppercase; color:#99958e; text-decoration: none;">Sushi
+            <a href="#"
+               style="font: 9px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 20px; text-transform:uppercase; color:#99958e; text-decoration: none;">Sushi
               Neko</a>
           </td>
           <td align="center">
