--- a/letters/letter6/index.html
+++ b/letters/letter6/index.html
@@ -10,10 +10,8 @@
   <tr>
     <td height="89px" valign="top"
         style="vertical-align: top; line-height: 0; height: 89px;">
-      <div style="height: 89px;">
-        <img align="left" border="0" vspace="0" width="600" height="89" style="display: block; border: none;"
-             src="images/header.jpg" alt=""/>
-      </div>
+      <img align="left" border="0" vspace="0" width="600" height="89" style="display: block; border: none;"
+           src="images/header.jpg" alt=""/>
     </td>
   </tr>
   </thead>
@@ -25,15 +23,14 @@
           Would you like to try our Sushi Party To go Trays?</b>
       </p>
 
-      <p style="text-transform:uppercase;font-family: Arial;font-size: 12px;line-height: 18px;color: #333333;text-align: justify">
+      <p
+        style="text-transform:uppercase;font-family: Arial;font-size: 12px;line-height: 18px;color: #333333;text-align: justify">
         We have various Sushi Party trays to select for various special occasions:
         Game parties, Baby showers or Weekend Get-togethers.
       </p>
 
-      <div style="height: 328px;">
-        <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #cccccc;"
-             src="images/central-img.jpg" alt=""/>
-      </div>
+      <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #cccccc;"
+           src="images/central-img.jpg" alt=""/>
     </td>
   </tr>
   <tr>
@@ -82,10 +79,8 @@
   </tr>
   <tr>
     <td>
-      <div style="height: 11px;">
-        <img align="center" border="0" vspace="0" width="600" height="11" style="display: block; border: none;"
-             src="images/trim-bottom.jpg" alt=""/>
-      </div>
+      <img align="center" border="0" vspace="0" width="600" height="11" style="display: block; border: none;"
+           src="images/trim-bottom.jpg" alt=""/>
     </td>
   </tr>
   </tbody>
@@ -97,41 +92,38 @@
         <tbody>
         <tr>
           <td width="30%">
-            <div style="height: 36px;">
-              <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                <img align="center" border="0" vspace="0" style="display: block; border: none;"
-                     src="images/nake-res.jpg"
-                     alt=""/>
-              </a>
-            </div>
+            <a href="#"
+               style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+              <img align="center" border="0" vspace="0" style="display: block; border: none;"
+                   src="images/nake-res.jpg"
+                   alt=""/>
+            </a>
           </td>
           <td width="30%">
-            <table align="center" cellspacing="0" cellpadding="0" width="80%" style="background-color:#660000;padding: 0">
+            <table align="center" cellspacing="0" cellpadding="0" width="80%"
+                   style="background-color:#660000;padding: 0">
               <tbody>
               <tr>
                 <td width="20%">
-                  <div style="height: 42px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/facebook.png" alt=""/>
-                    </a>
-                  </div>
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/facebook.png" alt=""/>
+                  </a>
                 </td>
                 <td width="20%">
-                  <div style="height: 42px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/twitter.png" alt=""/>
-                    </a>
-                  </div>
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/twitter.png" alt=""/>
+                  </a>
                 </td>
                 <td width="20%">
-                  <div style="height: 42px;">
-                    <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                      <img align="center" border="0" vspace="0" style="display: block; border: none"
-                           src="images/zw.png" alt=""/>
-                    </a>
-                  </div>
+                  <a href="#"
+                     style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/zw.png" alt=""/>
+                  </a>
                 </td>
               </tr>
               </tbody>
@@ -153,12 +145,11 @@
         <tbody>
         <tr>
           <td align="center">
-            <div style="height: 37px;">
-              <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                <img align="center" border="0" vspace="0" style="display: block; border: none"
-                     src="images/western-concepts.png" alt=""/>
-              </a>
-            </div>
+            <a href="#"
+               style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
+              <img align="center" border="0" vspace="0" style="display: block; border: none"
+                   src="images/western-concepts.png" alt=""/>
+            </a>
           </td>
         </tr>
         </tbody>
@@ -169,7 +160,8 @@
         <tbody>
         <tr>
           <td align="center">
-            <a href="#" style="font: 9px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 20px; text-transform:uppercase; color:#99958e; text-decoration: none;">Sushi
+            <a href="#"
+               style="font: 9px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 20px; text-transform:uppercase; color:#99958e; text-decoration: none;">Sushi
               Neko</a>
           </td>
           <td align="center">
